--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "devDependencies": {
         "@types/express": "^4.17.13",
         "@types/node": "^18.0.6",
+        "@types/react": "^18.0.15",
+        "@types/react-dom": "^18.0.6",
         "nodemon": "^2.0.19",
         "ts-node": "^10.9.1",
         "typescript": "^4.7.4"
@@ -17,6 +19,8 @@
         "express-winston": "^4.2.0",
         "helmet": "^5.1.0",
         "http-status-codes": "^2.2.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "winston": "^3.8.1"
     },
     "scripts": {
