--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "typescript": "^4.7.4"
     },
     "dependencies": {
+        "boring-avatars": "^1.7.0",
         "express": "^4.18.1",
         "express-winston": "^4.2.0",
         "helmet": "^5.1.0",
