--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@types/node": "^18.0.6",
         "@types/react": "^18.0.15",
         "@types/react-dom": "^18.0.6",
+        "@types/sharp": "^0.30.4",
         "nodemon": "^2.0.19",
         "ts-node": "^10.9.1",
         "typescript": "^4.7.4"
@@ -31,6 +32,7 @@
         "http-status-codes": "^2.2.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "sharp": "^0.30.7",
         "winston": "^3.8.1"
     },
     "scripts": {
